--- a/ways/0305.md
+++ b/ways/0305.md
@@ -23,7 +23,25 @@ ps：负值无效。
 这样就不会引起重排，影响页面布局。
 
 #### 3 box-shadow
-css3的属性 
+css3 属性 添加上下，左右阴影，兼容到ie9
+
+    box-shadow: h-shadow v-shadow blur spread color inset;
+
+属性值
+* h-shadow 必需的。水平阴影的位置。允许负值,为0时，代表水平不偏移，为负时代表往左偏移
+* v-shadow	必需的。垂直阴影的位置。允许负值，为0时，代表垂直不偏移，为负时代表往上偏移
+* blur	可选。模糊距离，当水平和垂直的值都为0时，blur有值，依然有阴影，说明blur是有大小的，但不会影响该元素的大小
+* spread	可选。阴影的大小,color所在的大小
+* color	可选。阴影的颜色
+* inset	可选。从外层的阴影（开始时）改变阴影内侧阴影（不选inset时默认是外阴影，没有outset之说）
+
+例子
+
+    div
+    {
+        box-shadow: 10px 10px 5px 0px #888888 inset;
+    }
+
 
 #### 4 vue引入图片
 两种，按照约定俗成的习惯，不经过webpack处理的放在static，需要经过处理的放assets：
