复习box-shadow的属性

--- a/ways/0305.md
+++ b/ways/0305.md
@@ -42,6 +42,14 @@ css3 属性 添加上下，左右阴影，兼容到ie9
         box-shadow: 10px 10px 5px 0px #888888 inset;
     }
 
+可以多个值，控制左右上下的阴影
+
+    div{
+        box-shadow: -10px 0px 5px #888888, // 左边阴影
+                    0px -10px 5px #ccc,  //  上边阴影
+                    10px 0px 5px red,   // 右边阴影
+                    0px 10px 5px green   // 下边阴影
+    }
 
 #### 4 vue引入图片
 两种，按照约定俗成的习惯，不经过webpack处理的放在static，需要经过处理的放assets：
