--- a/ways/0313.md
+++ b/ways/0313.md
@@ -1,13 +1,13 @@
 #### 回到顶部
-`window.scrollTo(0,0)` 一次性的过程,就是滚动到起始位置，就是x=0，y=0的地方。
-是绝对滚动，相对屏幕来说。和`window.scroll(0,0)`一样的道理  
+`window.scrollTo(0,0)` 一次性的过程,就是滚动到起始位置，就是x=0，y=0的地方。
+是绝对滚动，相对屏幕来说。和`window.scroll(0,0)`一样的道理  
 
 window.scrollTo(x,y)  
 参数解释：  
 &nbsp;&nbsp;&nbsp;&nbsp;x:要在窗口文档显示区左上角显示的文档的 x 坐标。  
 &nbsp;&nbsp;&nbsp;&nbsp;y:要在窗口文档显示区左上角显示的文档的 y 坐标。
 
-也有以对象形式的传参数。  
+也有对象形式的传参数。  
 window.scrollTo(options)  
 参数解释：  
 &nbsp;&nbsp;&nbsp;&nbsp;options有三个属性： 
@@ -16,7 +16,7 @@ window.scrollTo(options)
 * behavior:behavior。属性规定调整是以动画方式完成，还是瞬间完成，具有两个属性值，"auto"与"smooth"
 
 既然是调整滚动条的位置，那必须在一个坐标系中，否则你无法定位。  
-兼容性：xy形式的传参，任何浏览器都兼容，但opitons形式的传参，只有谷歌，火狐，opera兼容，其他不兼容。
+兼容性：xy形式的传参，任何浏览器都兼容，但opitons形式的传参，只有谷歌，火狐，opera兼容，其他不兼容。
 
 拓展：  
 `window.scrollBy(x-coord, y-coord)` 代表的是在窗口中按指定的偏移量滚动文档。  
@@ -24,7 +24,7 @@ scrollBy方法可以将文档位置移动指定尺寸，单位是像素（px）
 scrollBy设置的尺寸不是一个绝对值，而是`基于上一次值的一个增量`。就是每次点击就是累加的过程。
 `该前提是有滚动条的情况才能生效`，兼容性都适用于各个浏览器
 
-#### 正则，获取dom元素的某个值
+#### 正则，获取dom元素的某个值
 获取a的x值。  
 let a = translate3d(-288.88px, 0px, 0px)  
 let b = a.match(/translate3d\((\-?\d+(\.\d+)?)px,\s*(\d+)px,\s*(\d+)px\)/i)[1]
@@ -44,8 +44,8 @@ img.src = `http://10.200.7.17:1220/captchaImage?type=char&s=${Math.random()}`   
 #### forEach 无法跳出循环
 js的forEach循环  
 用break直接报错 'Illegal break statement'  
-用continue报 Illegal continue statement: no surrounding iteration statement  
-return是可以跳出满足条件的循环，而不是终止循环，return false也是如此
+用continue报 Illegal continue statement: no surrounding iteration statement  
+return是可跳出满足条件的循环，而不是终止循环，return false也是如此
 ```javascript 
 var arr = [1,2,3,4,5,6]
 arr.forEach(val=>{
@@ -57,7 +57,7 @@ arr.forEach(val=>{
 })
 ```
 解决办法   
-* 用普通的for循环，可以使用break，return跳出
+* 用普通的for循环，可以使用break，return跳出
 * 网上说的，用抛出异常的方式跳出循环。
   ```javascript
   try {
