--- a/ways/03180408.md
+++ b/ways/03180408.md
@@ -312,7 +312,7 @@ vue的filter有两种声明方式,然后在引用的时候加上
 
     function isInArray(arr,obj){
       let l = arr.length
-      while(l—){
+      while(l—-){
         if(arr[i] == obj){
           return true
         }
@@ -375,7 +375,7 @@ window.open()弹出新窗口的属性如下：
               'Cache-Control': 'no-cache'
           }
         })
-  以上无效。。。。。。。
+  以上无效。。。。。。    
 2. 添加时间戳（require.js）
 
     //axios拦截器（未认真看其他的代码）
@@ -477,7 +477,7 @@ JS里面的String的初始化有两种方式，直接赋值和String对象的实
                 <h3>item</h3>
             </el-carousel-item>
         </el-carousel>
-        <el-button @click="click">
+        <el-button @click="click"></el-button>
       </template>
 
       methods: {
