--- a/ways/牛客刷题.md
+++ b/ways/牛客刷题.md
@@ -68,3 +68,17 @@
 * SOCKS 1080
 * ftp 21
 * SMTP 25
+
+#### 白屏时间(first Paint Time),用户可操作时间(dom ready), onload
+白屏时间(first Paint Time): 从用户打开页面到页面开始有东西呈现为止
+用户可操作时间(dom ready)：用户可以进行正常的点击，输入操作。
+先白屏后操作
+
+#### 定时器
+定时器的第一个参数如果是函数调用，会立即执行，不会考虑第二个参数的时间延迟
+
+    function foo(){
+      console.log('abc')
+    }
+    setTimeout(foo,4000) // 4s后实行foo
+    setTimeout(foo(),4000) // 立即实行foo
