--- a/ways/牛客刷题.md
+++ b/ways/牛客刷题.md
@@ -82,3 +82,44 @@
     }
     setTimeout(foo,4000) // 4s后实行foo
     setTimeout(foo(),4000) // 立即实行foo
+
+#### 
+
+* <HR> ：表示一条横线    
+* <BR> :可插入一个简单的换行符   
+* <TR>产生一个表行
+
+#### link与@import
+
+* 1，@import url（）机制是不同于link的，link是在加载页面前把css加载完毕，而@import url（）则是读取完文件后在加载，所以会出现一开始没有css样式，闪烁一下出现样式后的页面(网速慢的情况下)。  
+* 2，@import 是css2里面的，所以古老的ie5不支持。  
+* 3，当使用javascript控制dom去改变样式的时候，只能使用link标签，因为@import不是dom可以控制的。
+* 4，link除了能加载css外还能定义RSS，定义rel连接属性，@import只能加载css  
+
+#### getCurrentPosition()
+获取用户当前位置放入一个值中保存
+
+#### getLocation()
+地图定位
+
+#### css中clear的作用是什么
+clear : none | left | right | both.
+对于CSS的清除浮动(clear)，一定要牢记：这个规则只能影响使用清除的元素本身，不能影响其他元素
+
+tip:
+清除浮动：
+1，伪元素清除法 给父级元素添加class=“clearfix”
+  clearfix::after{
+    content: '';
+    height: 0;
+    display:block;
+    visibility:hidden;
+    clear:both;
+    line-height: 0
+  }
+2，在css中给父级添加属性：overflow：hidden；
+3，建立空的div，命名为clear，在css中添加clear：both；
+
+#### 不改变愿数组，修改数据并返回新数组
+* var arr1 = JSON.parse(JOSN.stringify(arr))
+* var arr2 = arr.concat([])
