--- a/ways/牛客刷题.md
+++ b/ways/牛客刷题.md
@@ -123,3 +123,8 @@ tip:
 #### 不改变愿数组，修改数据并返回新数组
 * var arr1 = JSON.parse(JOSN.stringify(arr))
 * var arr2 = arr.concat([])
+
+#### doctype
+在文档开始处没有发现文档类型声明，则所有浏览器都会默认开启混杂模式！
+
+hack技术主要是为了某些浏览器特定设置的，写在css中，里面可以嵌套style和html代码，不可以写在style中。
