--- a/ways/牛客刷题.md
+++ b/ways/牛客刷题.md
@@ -85,9 +85,9 @@
 
 #### 
 
-* <HR> ：表示一条横线    
-* <BR> :可插入一个简单的换行符   
-* <TR>产生一个表行
+* \<HR> ：表示一条横线    
+* \<BR> :可插入一个简单的换行符   
+* \<TR>产生一个表行
 
 #### link与@import
 
@@ -109,14 +109,15 @@ clear : none | left | right | both.
 tip:
 清除浮动：
 1，伪元素清除法 给父级元素添加class=“clearfix”
-  clearfix::after{
-    content: '';
-    height: 0;
-    display:block;
-    visibility:hidden;
-    clear:both;
-    line-height: 0
-  }
+
+    clearfix::after{
+      content: '';
+      height: 0;
+      display:block;
+      visibility:hidden;
+      clear:both;
+      line-height: 0
+    }
 2，在css中给父级添加属性：overflow：hidden；
 3，建立空的div，命名为clear，在css中添加clear：both；
 
@@ -128,3 +129,24 @@ tip:
 在文档开始处没有发现文档类型声明，则所有浏览器都会默认开启混杂模式！
 
 hack技术主要是为了某些浏览器特定设置的，写在css中，里面可以嵌套style和html代码，不可以写在style中。
+
+#### noscript
+noscript 元素用来定义在脚本未被执行时的替代内容（文本）
+此标签可被用于可识别 \<script\> 标签但无法支持其中的脚本的浏览器。
+
+    <body>
+      ...
+      ...
+      <script type="text/javascript">
+        <!--
+        document.write("Hello World!")
+        //-->
+      </script>
+      
+      <noscript>Your browser does not support JavaScript!</noscript>
+      ...
+      ...
+    </body>
+
+#### JavaScript的全局函数
+escape()、eval()、isFinite()、isNaN()、parseFloat()、parseInt()、unescape()。
