--- a/ways/牛客刷题.md
+++ b/ways/牛客刷题.md
@@ -150,3 +150,34 @@ noscript 元素用来定义在脚本未被执行时的替代内容（文本）
 
 #### JavaScript的全局函数
 escape()、eval()、isFinite()、isNaN()、parseFloat()、parseInt()、unescape()。
+
+#### 编译性语言和解释性语言
+* 1、编译性语言
+  * （1）只须编译一次就可以把源代码编译成机器语言，后面的执行无须重新编译，直接使用之前的编译结果就可以；因此其执行的效率比较高；
+  * （2）编译性语言代表：C、C++、Pascal/Object Pascal（Delphi）；
+  * （3）程序执行效率比较高，但比较依赖编译器，因此跨平台性差一些；
+* 2、解释性语言
+  * （1）源代码不能直接翻译成机器语言，而是先翻译成中间代码，再由解释器对中间代码进行解释运行；
+  `源代码—>中间代码—>机器语言`
+  * （2）程序不需要编译，程序在运行时才翻译成机器语言，每执行一次都要翻译一次；
+  * （3）解释性语言代表：Python、JavaScript、Shell、Ruby、MATLAB等；
+  * （4）运行效率一般相对比较低，依赖解释器，跨平台性好；
+
+#### for in 遍历原型链上的属性
+使用 for in 循环遍历对象的属性时，原型链上的所有属性都将被访问
+
+    function Obj(name,age){
+      this.name = name
+      this.age = age
+      this.sayHi = () => {
+        console.log(`大家好，我叫${this.name}`)
+      }
+    }
+    Obj.prototype.sex = 'male'
+    Obj.prototype.hobby = ()=>{
+      console.log('basketball')
+    }
+    var peter = new Obj('peter', 25)
+    for (var i in peter) {
+      console.log(i) // name age sayHi sex hobby
+    }
