--- a/ways/vue3/特性&区别&架构&钩子.md
+++ b/ways/vue3/特性&区别&架构&钩子.md
@@ -1,3 +1,42 @@
+### vue3的特性
+
+1. 数据响应式 原理重新实现 ( ES6 的 proxy 替代了 ES5 的 Object.defineProperty)
+    * 解决了对象、数组更新后的检测, 大大优化了响应式监听的性能
+    * 原来检测对象属性的变化, 需要一个个对属性递归监听, proxy 可以直接对整个对象劫持
+2. 虚拟 DOM - 新算法 (更快 更小) // todo 待研究
+3. 提供了 composition api, 可以更好的逻辑复用
+4. template 模板可以有多个根元素
+5. 源码用 Typescript 重写, 有更好的 类型推导 (类型检测更为严格, 更稳定)
+
+### 相对于vue2的变化
+
+1. vue3可以兼容vue2的写法(vue2的大多数特性，vue3可以支持)
+2. vue3对比vue2具有明显的性能提升
+    * 打包大小减少41%
+    * 初次渲染快55%，更新快133%
+    * 内存使用减少54%
+3. 使用Proxy代替defineProperty实现响应式数据（这样无法兼容ie9以下）
+    * vue2的响应式
+        1. Object.defineProperty 来劫持各个属性的setter、getter，在数据变动时发布消息给订阅者，触发相应的监听回调
+        2. 对象：递归调用defineProperty对对象已有属性值的读取和修改进行拦截
+        3. 数组：重写数组更新数组一系列更新元素的方法来实现元素修改的劫持
+        4. 问题：
+            1. 不能监听到对象属性的添加和删除，需要Vue.set()来添加和删除。
+            2. 不能通过下标替换元素或更新length
+    * vue3的响应式
+        1. 通过Proxy: 拦截对data任意属性的任意操作, 包括属性值的读写, 属性的添加, 属性的删除等
+        2. 通过 Reflect: 动态对被代理对象的相应属性进行特定的操作
+4. 性能提升原因:
+    1. 静态标记（patchFlags）
+        1. vue2从根节点开始对虚拟dom进行全量对比（每个节点不论写死的还是动态的都会一层一层比较）
+        2. vue3新增了静态标记 与上次虚拟dom对比的时候，只对比带有 patchFlags 的节点。跳过一些静态节点对比。
+    2. hoistStatic 静态提升
+        1. vue2里每当触发更新的时候，不管元素是否参与更新，每次都会重新创建
+        2. vue3为了避免每次渲染的时候都要重新创建这些对象，会把不参与更新的元素保存起来，只创建一次，每次复用。
+    3. cacheHandlers 事件缓存
+        1. vue2里绑定事件都要重新生成新的function去更新
+        2. vue3会自动生成一个内联函数，同时生成一个静态节点。onclick时会读取缓存，如果缓存没有的话，就把传入的事件存到缓存里。
+
 ### setup
 
 有两种方式：
@@ -17,19 +56,35 @@ export default {
     },
     mounted (){
         console.log(this.count) // 0
+    },
+    updated() {
+        // ....
     }
 }
 </script>
 ```
 
+请注意在模板中访问从 setup 返回的 ref 时，它会自动浅层解包，因此你无须再在模板中为它写 .value。
+
 2. 直接在script标签中直接声明 setup
 
 ```typescript
 <script lang="ts" setup>
-import {ref,Ref} from 'vue';
+import {ref,Ref, onMounted, onUpdated} from 'vue';
 const count:Ref<number> = ref(0)
 console.log(count) // 0
+onMounted(() => {
+  setTimeout(()=>{
+    console.log(new Date())
+  }, 1000)
+})
+onUpdated(() => {
+  // 文本内容应该与当前的 `count.value` 一致
+  console.log(document.getElementById('count').textContent)
+})
 </script>
 ```
 
-###
+### 生命周期
+
+![生命周期](../../images/lifecycle.png)
