--- a/ways/vue3/特性&区别&架构&钩子.md
+++ b/ways/vue3/特性&区别&架构&钩子.md
@@ -85,6 +85,20 @@ onUpdated(() => {
 </script>
 ```
 
+eg:当想获取当前的实例时，直接通过getCurrentInstance获取
+
+```javascript
+const {proxy:app} = getCurrentInstance()
+// todo
+```
+
+setup知识点：
+
+1. 在beforeCreate之前创建，因此，这个函数中没有this。因此不能访问data，methods等。但methods中可以访问setup提供的属性和方法
+return中返回的属性跟data合并，返回的方法跟methods里的方法合并；如有重名，setup优先
+2. setup不能是一个async函数，使用async后返回值不是return的对象，而是promise。非要使用，需要使用\<suspense>包裹组件
+3. setup接收两个参数setup(props, context) || setup(props, {attrs, slots, emit}) 不能解构props，否则会失去响应式
+
 ### 生命周期
 
 ![生命周期](../../images/lifecycle.png)
