feat: 1. vue3特性/优点 2.ref/reactive全家桶回顾及添加新知识

--- a/ways/vue3/特性&区别&架构&钩子.md
+++ b/ways/vue3/特性&区别&架构&钩子.md
@@ -3,10 +3,18 @@
 1. 数据响应式 原理重新实现 ( ES6 的 proxy 替代了 ES5 的 Object.defineProperty)
     * 解决了对象、数组更新后的检测, 大大优化了响应式监听的性能
     * 原来检测对象属性的变化, 需要一个个对属性递归监听, proxy 可以直接对整个对象劫持
-2. 虚拟 DOM - 新算法 (更快 更小) // todo 待研究
+2. 虚拟 DOM - 新算法 (更快 更小)
+    采用了patch flag标志的方式，不用一个一个去比较，而是通过patch flag去进行相应的更新，它的强大之处就在于当diff算法走到_createBlock函数的时候，会忽略所有的静态节点，只对有标记的动态节点进行比较，而且在多层下依然有效
 3. 提供了 composition api, 可以更好的逻辑复用
-4. template 模板可以有多个根元素
-5. 源码用 Typescript 重写, 有更好的 类型推导 (类型检测更为严格, 更稳定)
+4. template 模板可以有多个根元素 Fragment
+5. tree-shaking
+    它通过import的方式引入vue里的指令和方法，将全局API进行分块，所以一个组件不用打包全部的vue方法，如果不使用某些功能，那么他就不会出现在组件vue文件中
+
+    ```javascript
+    import{watch,computed} from 'vue' // 当前组件中只会打包watch，computed，而不会有其他的API
+    ```
+
+6. 源码用 Typescript 重写, 有更好的 类型推导 (类型检测更为严格, 更稳定)
 
 ### 相对于vue2的变化
 
@@ -36,6 +44,23 @@
     3. cacheHandlers 事件缓存
         1. vue2里绑定事件都要重新生成新的function去更新
         2. vue3会自动生成一个内联函数，同时生成一个静态节点。onclick时会读取缓存，如果缓存没有的话，就把传入的事件存到缓存里。
+
+### diff算法
+
+有key时
+
+1. 前序对比算法
+2. 尾序对比算法
+3. 新节点若多出来就挂载
+4. 旧节点若多出来就卸载
+5. 特殊情况乱序（最长递增子序列）
+
+eg： 与vue2的diff算法有区别，vue2的diff算法，也有前序对比算法和尾序对比算法，但也有头尾对比算法，vue3没有头对尾对比算法
+
+无key时
+
+1. patch进行替换
+2. 新增/删除
 
 ### setup
 
