feat: 生命周期回顾

--- a/ways/vue3/特性&区别&架构&钩子.md
+++ b/ways/vue3/特性&区别&架构&钩子.md
@@ -127,3 +127,13 @@ return中返回的属性跟data合并，返回的方法跟methods里的方法合
 ### 生命周期
 
 ![生命周期](../../images/lifecycle.png)
+
+1. 在setup语法糖里，是没有beforeCreate和created,默认为已经实行了这两个生命钩子
+2. beforeMount和mounted 加载
+    1. beforeMount是拿不到dom的
+    2. mounted可以拿到dom
+3. beforeUpdate和updated 更新
+    1. beforeUpdate获取的是更新前的值
+    2. updated获取的是更新后的值
+4. beforeUnmount和unmounted 销毁
+5. onRenderTracked和onRenderTriggered 用来调试，参数就是当前被收集依赖的对象
