--- a/ways/vue3/特性&区别&架构&钩子.md
+++ b/ways/vue3/特性&区别&架构&钩子.md
@@ -137,3 +137,11 @@ return中返回的属性跟data合并，返回的方法跟methods里的方法合
     2. updated获取的是更新后的值
 4. beforeUnmount和unmounted 销毁
 5. onRenderTracked和onRenderTriggered 用来调试，参数就是当前被收集依赖的对象
+
+### vue的watch原理
+
+与vue2的watch的原理依赖收集的方式追踪数据的变化来触发对应的回调函数而言，vue3的原理做了以下变化：
+
+1. Proxy 和 Reflect：Vue 3 使用 Proxy 对象和 Reflect API 来代替 Object.defineProperty，实现对数据的劫持和监测。这种新的底层实现机制使得 Watcher 能够更准确地追踪依赖的变化
+2. Scheduler 和 Reactive Effects：Vue 3 引入了新的 Scheduler 机制，用于调度任务的执行顺序，从而优化副作用的触发。Watcher 在 Vue 3 中被称为 Reactive Effects，它们被封装到 Scheduler 中，通过调度算法来决定何时执行以处理数据变化。
+3. 清除机制：Vue 3 对 Watcher 的清除机制进行了改进。当不再需要某个 Watcher 时，Vue 3 会进行快速的清理和回收，以提高内存的利用率。
